Fixed header alignment issue

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -254,7 +254,7 @@ div.au-stagger {
 }
 .material-header{
   /*position: absolute;*/
-  height:auto;
+  height:128px;
   margin-left:auto;
   margin-right:-256px;
   /*overflow-x: hidden;
